--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,14 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+<dependency>
+    <groupId>mysql</groupId>
+    <artifactId>mysql-connector-java</artifactId>
+    <version>5.1.46</version>
+</dependency>
+    
+    
   </dependencies>
   
   <build>
@@ -39,7 +47,7 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.6.1</version>
-        <configuration>
+        <configuration> 
           <source>1.7</source>
           <target>1.7</target>
         </configuration>
