--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,13 @@
           <version>1.6.1</version>
       </dependency>
 
+      <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-digester3 -->
+      <dependency>
+          <groupId>org.apache.commons</groupId>
+          <artifactId>commons-digester3</artifactId>
+          <version>3.2</version>
+      </dependency>
+
 
   </dependencies>
   
